# sucnr1-metaflex

./: LICENSE  README.md  pyproject.toml
configs/: dashboard.yaml  data_sources.yaml  fit.yaml  fit_body.yaml  fit_combined.yaml  fit_liver.yaml  model_body.yaml  model_combined.yaml  model_liver.yaml  protocols.yaml  scenarios.yaml
results/: data_inventory.csv  data_inventory.md
results/models/: body.xml  body_liver.xml  liver.xml
results/processed/: all_tidy.csv  dynamic_body.csv  dynamic_seahorse.csv
scripts/: simulate_plot_all_models.py
src/: libsbml.py
src/sucnr1_metaflex/: __init__.py  cli.py  logging_config.py  paths.py
src/sucnr1_metaflex/calibration/: fit.py  numba_kernels.py  objective.py  parameters.py  protocols.py
src/sucnr1_metaflex/data/: __init__.py  excel_parser.py  extract.py  inventory.py  tidy.py
src/sucnr1_metaflex/experiments/: scenario_runner.py
src/sucnr1_metaflex/model/: __init__.py  sbml_body.py  sbml_combined.py  sbml_liver.py  sbml_validate.py
src/sucnr1_metaflex/simulation/: forward.py  protocols.py  roadrunner_engine.py  steady_state.py
src/sucnr1_metaflex/visualization/: __init__.py  cli.py  fit.py  goodness_of_fit.py  io.py  scenarios.py  style.py  timeseries.py
tests/: conftest.py  test_data_inventory.py  test_excel_parser.py  test_numba_kernels.py  test_objective.py  test_protocol_config_hardening.py  test_protocol_driven_model.py  test_protocols.py  test_roadrunner_simulation.py  test_sbml_build.py  test_sbml_validate.py  test_scenarios.py  test_tidy_schema.py
